2011-04-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/tkTable.test, unix/tktable.spec, generic/version.h:
	* win/makefile.vc, demos/loadtable.tcl: Update version to 2.11
	* configure, configure.in, tclconfig/tcl.m4: Update to TEA 3.9
	* Makefile.in: add valgrind targets

	* generic/tkTable.c (TableDisplay): fix window clipping to use
	large enough clip window.

2010-08-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTable.h (CONSTRAIN): handle constraints where max<min.
	[Bug 2672726] (becroft)

	* win/makefile.vc (LIBS): add ""s where needed [Bug 2305395] (oehhar)
	(VERSION): add VERSION var [Bug 2305448] (oehhar)

	* library/tktable.py (Table.width): handle empty colum
	(Table._tabsubst): improve substitutions [Bug 2293127] (ggpolo)
	(ArrayVar): improve py integration [Bug 2333824] (ggpolo)
	(Table.__init__): support TKTABLE_LIBRARY env var [Bug 2334490) (ggpolo)

	* generic/tkTable.c (TableFetchSelection): significant performance
	improvement in large table selection retrieval. [Bug 2901813] (cerney)

2010-04-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* license.txt: update wording and clause reference in government
	use clause to clarify license allowances.

2008-11-14  Jeff Hobbs  <jeffh@ActiveState.com>

	**** 2.10 TAGGED FOR RELEASE ****

	* generic/tkTable.c: Set NO_XSETCLIP universally as Tk 8.5/Xft
	seems to ignore XSetClipRectangles.  This may slow things down a
	little, but draws correctly. [Bug 1805350]

	* UPGRADING.txt (removed): no longer need this old v1 upgrade doc.

	* README.txt: remove refs to mac classic stuff, update notes

	* configure, configure.in, tclconfig/tcl.m4: Update to TEA 3.7
	* tests/tkTable.test, unix/tktable.spec, generic/version.h:
	* demos/loadtable.tcl: Update version to 2.10
	* Makefile.in: update dist target, include library/tktable.py

	* demos/tktable.py: note that this version is outdated
	* library/tktable.py (NEW): Added new version of tktable wrapper