@@ -3836,9 +3836,11 @@ TableValidateChange(tablePtr, r, c, old, new, index)
 	return TCL_OK;
     }
 
+#if !defined(WIN32) && !defined(MAC_OSX_TK)
     /* Magic code to make this bit of code UI synchronous in the face of
      * possible new key events */
     XSync(tablePtr->display, False);
+#endif
     rstrct = Tk_RestrictEvents(TableRestrictProc, (ClientData)
 				 NextRequest(tablePtr->display), &cdata);
 
